<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_margin="16dp"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:weightSum="1">


	<ImageView
		android:id="@+id/field_photo"
		android:layout_width="336dp"
		android:layout_height="224dp"
		android:layout_gravity="center"
		android:layout_margin="16dp"
		android:cropToPadding="true"
		android:scaleType="centerInside"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="8dp"
		tools:ignore="MissingConstraints" />
	
	<LinearLayout
		android:id="@+id/Photo_Info"
		android:layout_width="336dp"
		android:layout_height="0dp"
		app:layout_constraintTop_toBottomOf="@+id/field_photo"
		android:orientation="horizontal"
		tools:layout_editor_absoluteX="8dp"
		android:layout_marginTop="0dp"
		tools:ignore="MissingConstraints">
		
                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
					android:text="@string/Test_Location"
					android:gravity="left"/>

				<TextView
					android:id="@+id/textView"
					style="?android:listSeparatorTextViewStyle"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
					android:text="@string/Test_Date"
					android:textAlignment="center" />

	</LinearLayout>

	<EditText
		android:id="@+id/field_message"
		android:layout_width="336dp"
		android:layout_height="0dp"
		app:layout_constraintTop_toBottomOf="@+id/Photo_Info"
		android:layout_weight="0.77"
		android:text="@string/Test_Text"
		tools:layout_editor_absoluteX="8dp"
		android:layout_marginTop="0dp"
		android:layout_marginBottom="8dp"
		app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
		tools:ignore="MissingConstraints" />

	<android.support.constraint.ConstraintLayout
		android:layout_width="336dp"
		android:layout_height="48dp"
		android:layout_gravity="bottom"
		android:orientation="horizontal"
		tools:layout_editor_absoluteX="8dp"
		app:layout_constraintBottom_toBottomOf="parent"
		android:layout_marginBottom="8dp"
		android:id="@+id/constraintLayout"
		tools:ignore="MissingConstraints">

		<TextView
			android:id="@+id/sent_recipient"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/Test_Recipient"
			android:layout_marginLeft="8dp"
			app:layout_constraintLeft_toLeftOf="parent"
			android:layout_marginStart="8dp"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="8dp"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginBottom="8dp"
			app:layout_constraintVertical_bias="0.504" />

		<TextView
			android:id="@+id/field_status"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/Test_Status"
			android:layout_marginRight="8dp"
			app:layout_constraintRight_toLeftOf="@+id/sent_status"
			android:layout_marginEnd="8dp"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="8dp"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginBottom="8dp" />


		<ProgressBar
			android:id="@+id/sent_status"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:layout_gravity="right"
			android:layout_marginRight="8dp"
			app:layout_constraintRight_toRightOf="parent"
			android:layout_marginEnd="8dp"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="8dp"
			app:layout_constraintBottom_toBottomOf="parent"
			android:src="@android:drawable/ic_menu_camera" />

	</android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>